--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.7",
     "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-redux": "^9.1.0",
+    "react-router": "^6.22.0",
     "react-router-dom": "^6.21.3",
     "react-router-hash-link": "^2.4.3",
     "redux": "^5.0.1",
