--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.7",
+    "calendar": "^0.1.1",
+    "date-fns": "^3.3.1",
     "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-redux": "^9.1.0",
