--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "calendar": "^0.1.1",
     "date-fns": "^3.3.1",
     "flowbite-react": "^0.7.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
